untested/prov2/modules/vpc/vpc.tf
resource "aws_vpc" "demo2_vpc" {
    cidr_block = "${var.vpc_cidr}"
    enable_dns_hostnames = true
    tags {
        Name = "demo2_vpc"
    }
}
